// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debounce #cancel should cancel trailing invokation 1`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": true,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 10,
  },
]
`;

exports[`debounce #create should delay trailing invoke after multiple calls 1`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  TaskCmd {
    "customArgs": Array [
      43,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
]
`;

exports[`debounce #create should delay trailing invoke after multiple calls 2`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  TaskCmd {
    "customArgs": Array [
      43,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 43,
  },
]
`;

exports[`debounce #create should have leading invokation and no trailing if invoked once 1`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": true,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 10,
  },
]
`;

exports[`debounce #create should have only leading invokation 1`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": true,
        "trailing": false,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 10,
  },
  TaskCmd {
    "customArgs": Array [
      43,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": true,
        "trailing": false,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
]
`;

exports[`debounce #create should have only leading invokation 2`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": true,
        "trailing": false,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 10,
  },
  TaskCmd {
    "customArgs": Array [
      43,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": true,
        "trailing": false,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
]
`;

exports[`debounce #create should invoke only trailing 1`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
]
`;

exports[`debounce #create should invoke only trailing 2`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 10,
  },
]
`;

exports[`debounce #create should leading and trailing invokations 1`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": true,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 10,
  },
]
`;

exports[`debounce #create should resolve promise after trailing invokation 1`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  TaskCmd {
    "customArgs": Array [
      43,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
]
`;

exports[`debounce #create should resolve promise after trailing invokation 2`] = `
Array [
  Object {
    "a": 0,
  },
  TaskCmd {
    "customArgs": Array [
      10,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  TaskCmd {
    "customArgs": Array [
      43,
    ],
    "customExecId": "DELAYED",
    "execEvery": true,
    "executor": [Function],
    "id": 3,
    "metaObj": Object {
      "options": Object {
        "leading": false,
        "trailing": true,
      },
      "wait": 100,
    },
    "notifyCmd": [Function],
    "task": [Function],
  },
  Object {
    "a": 43,
  },
]
`;
